Move list of DAA tools to chapter end

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -79,31 +79,6 @@ As a consequence, the following approaches have been developed:
   
   - Bias-correction used by ANCOMBC [@ancombc2020].
 
-Some of the popular tools for DAA include:
-
-- ALDEx2 [@Gloor2016] 
-- ANCOMBC [@ancombc2020]
-- corncob [@Martin2021]
-- DESeq2 [@Love2014] 
-- edgeR [@Chen2016]
-- lefser [@Khlebrodova2021]
-- MaAsLin2 [@Mallick2020]
-- metagenomeSeq [@Paulson2017]
-- limma [@Ritchie2015]
-- LinDA [@Zhou2022]
-- ZicoSeq [@Yang2022]
-- LDM [@Hu2020]
-- RAIDA [@Sohn2015]
-- DACOMP [@Brill2019]
-- Omnibus [@Omnibus2018]
-- eBay [@Liu2020]
-- ZINQ [@Ling2021]
-- ANCOM [@Mandal2015]
-- fastANCOM [@fastANCOM2022]
-- [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)  
-- [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
-
-
 We recommend to have a look at @Nearing2022 who compared all these
 methods across 38 different datasets. Because different methods use
 different approaches (parametric vs non-parametric, different
@@ -175,9 +150,9 @@ assay, and perform prevalence filtering.
 tse <- agglomerateByRank(tse0,
                          rank = "genus")
 
-tse <- transformCounts(tse,
-                       assay.type = "counts",
-                       method = "relabundance")
+tse <- transformAssay(tse,
+                      assay.type = "counts",
+                      method = "relabundance")
 
 # Subset based on the relative abundance assay		       
 tse <- subsetByPrevalentFeatures(tse,
@@ -186,9 +161,9 @@ tse <- subsetByPrevalentFeatures(tse,
                                  assay.type = "relabundance")
 
 # Add clr abundances
-tse <- transformCounts(tse,
-                       method = "clr",
-                       pseudocount = 1)
+tse <- transformAssay(tse,
+                      method = "clr",
+                      pseudocount = 1)
 ```
 
 Regarding prevalence filtering, @Nearing2022 found that applying a 10%
@@ -229,7 +204,7 @@ library(ALDEx2)
 # Convert each instance using the centered log-ratio transform.
 # This is the input for all further analyses.
 set.seed(254)
-mc_samples <- aldex.clr(assay(tse), tse$Geographical_location)     
+x <- aldex.clr(assay(tse), tse$Geographical_location)     
 ```
 
 
@@ -661,5 +636,32 @@ For testing associations based on balances, check the philr
 R/Bioconductor package.
 
 
+
+## Additional resources
+
+DAA can be performed by several means. Although most of them provide similar functionality, some may be more suitable than others given a certain study
+design or data type. Commonly used DAA tools include:
+
+- ALDEx2 [@Gloor2016] 
+- ANCOMBC [@ancombc2020]
+- corncob [@Martin2021]
+- DESeq2 [@Love2014] 
+- edgeR [@Chen2016]
+- lefser [@Khlebrodova2021]
+- MaAsLin2 [@Mallick2020]
+- metagenomeSeq [@Paulson2017]
+- limma [@Ritchie2015]
+- LinDA [@Zhou2022]
+- ZicoSeq [@Yang2022]
+- LDM [@Hu2020]
+- RAIDA [@Sohn2015]
+- DACOMP [@Brill2019]
+- Omnibus [@Omnibus2018]
+- eBay [@Liu2020]
+- ZINQ [@Ling2021]
+- ANCOM [@Mandal2015]
+- fastANCOM [@fastANCOM2022]
+- [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)
+- [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)
 
 
