--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -1,11 +1,9 @@
 # Differential Abundance {#differential-abundance}
+
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
-
-
-## Differential abundance analysis
 
 This section provides an introduction to Differential Abundance Analysis (DAA),
 which is used to identify differences in the abundances of individual taxa (at
@@ -22,75 +20,52 @@ understand the system as a whole. Despite its relevance in current research,
 the DAA approach has also been subject to debate [@Quinn2021].
 
 
-### Examples and tools
+## Statistical challenges of microbiome data 
 
-Due to the size and complexity of microbiome sequencing data, in this field
-DAA still faces several statistical challenges [@Yang2022]. These include:
-  
-- High variability. The abundance of a specific taxon could range over
-  several orders of magnitude.
-  
-- Zero-inflation. In a typical microbiome dataset, more than 70% of the
-  values are zeros. Zeros could be due to either physical absence
-  (structural zeros) or insufficient sampling effort (sampling zeros).
-  
-- Compositionality. Increase or decrease in the (absolute) abundance of
-  one taxon at the sampling site will lead to apparent changes in the
-  relative abundances of other taxa in the sample.
+Microbiome data display unique properties that are exclusively addressed by DAA
+tools developed for microbiome analysis [@Yang2022]. Specifically, microbiome
+data are characterized by high variability, zero-inflation and compositionality.
+**High variability** expresses that abundance of taxa often varies by several
+orders of magnitude from sample to sample. **Zero-inflation** means that
+typically more than 70% of the values are zeros, which could be due to either
+physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
+**Compositionality** implies that a change in the absolute abundance of one taxon
+will lead to apparent variations in the relative abundances of other taxa in the
+same sample. If neglected, such properties may cause significant bias in the
+results of DAA. Therefore, several approaches have been developed to address the
+unique properties of microbiome data and provide statistically useful results.
 
-As a consequence, the following approaches have been developed:
+The first approach to target zero-inflated data consists of specialized models,
+such as **over-dispersed count models** and **zero-inflated mixture models**.
+DESeq2 [@Love2014], edgeR [@Chen2016] and corncorb [@Martin2021] are based on
+over-dispersed count models, whereas metagenomeSeq [@Paulson2017], RAIDA
+[@Sohn2015], ZIBB [@ZIBB2018] and Omnibus [@Omnibus2018] implement zero-inflated
+mixture models to address zero-inflation. Typically, these models assume a
+negative binomial, beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation** also represents a valid approach to deal with zero-inflated
+data. ALDEx2 [@Gloor2016] and eBay [@Liu2020] apply a Bayesian model to impute
+the zeros when working with proportion data, accounting for sampling variability
+and sequencing depth variation. Other methods, such as MaAsLin2 [@Mallick2020]
+and ANCOMBC [@ancombc2020] impute the zeros with a pseudo-count strategy.
 
-- Over-dispersed count models has been proposed to address zero
-  inflation, such as the negative binomial model used by edgeR
-  [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by
-  corncorb [@Martin2021].
+Regarding the compositionality of microbiome data, several approaches have been
+developed to perform **robust normalization** with methods specifically designed
+to reduce the bias found in compositional data. Some examples include trimmed mean
+of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2, cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used
+by ALDEx2 and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an
+empirical Bayes approach. Other methods to deal with compositional data entail
+reference taxa approach used by DACOMP [@Brill2019] and RAIDA, analyzing the
+pattern of pairwise log ratios as done by ANCOM [@Mandal2015] and bias-correction
+applied by ANCOMBC.
 
-- Zero-inflated mixture models has aslo been proposed to address zero
-  inflation, such as zero-inflated log-normal/normal mixture model
-  used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015],
-  zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and
-  zero-inflated negative binomial model used by Omnibus
-  [@Omnibus2018].
+We recommend to have a look at @Nearing2022. In this study, multiple DAA methods
+were applied to 38 different datasets and their results were compared to one
+another. Because each method follows a slightly different approach in terms of
+assumptions and normalization techniques, it was shown that results on the same
+dataset may differ substantially depending on the method. More recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets. This study also concluded that different methods can produce contradictory results, creating the risk of cherry-picking the most favorable options for one’s
+own hypothesis. Therefore, it is highly recommended to perform DAA with multiple
+methods to determine whether the findings can be reproduced by different approaches.
 
-- Bayesian methods have been used to impute the zeros for methods
-  working on proportion data, accounting for sampling variability and
-  sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and
-  eBay [@Liu2020].
-
-- Other methods use the pseudo-count approach to impute the zeros,
-  such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
-
-- Different strategies have been used to address compositional
-  effects, including:
-
-  - Robust normalization. For example, trimmed mean of M-values (TMM)
-    normalization used by edgeR, relative log expression (RLE)
-    normalization used by DESeq2 [@Love2014], cumulative sum scaling
-    (CSS) normalization used by metagenomeSeq, centered log-ratio
-    transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and
-    geometric mean of pairwise ratios (GMPR) normalization used by
-    Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects
-    the compositional bias by an empirical Bayes approach, which has
-    been recommended in metagenomeSeq [@Paulson2017] tutorial.
-  
-  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015].
-  
-  - Analyzing the pattern of pairwise log ratios, such as ANCOM [@Mandal2015].
-  
-  - Bias-correction used by ANCOMBC [@ancombc2020].
-
-We recommend to have a look at @Nearing2022 who compared all these
-methods across 38 different datasets. Because different methods use
-different approaches (parametric vs non-parametric, different
-normalization techiniques, assumptions etc.), the results may differ
-between methods, sometimes substantially as @Nearing2022 pointed
-out. More recently @Yang2022 comprehensively evaluated these methods
-via a semi-parametric framework and 106 real datasets. @Yang2022 also
-concluded that different DA methods can sometimes produce discordant
-results, opening to the possibility for cherry-picking tools in favor
-of one’s own hypothesis. Therefore it is highly recommended to pick
-several methods to assess how robust and potentially reproducible your
-findings are with different methods.
+## Using the tools
 
 In this section we demonstrate the use of four methods that can be
 recommended based on recent literature (ANCOM-BC [@ancombc2020],
