removing release version installation

--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -34,13 +34,13 @@ source("https://raw.githubusercontent.com/microbiome/OMA/master/install_packages
 You can install R packages of your choice with the following command
 line procedure.
 
-**Bioconductor release version** is the most stable and tested version
-but may miss some of the latest methods and updates. It can be
-installed with:
+<!-- **Bioconductor release version** is the most stable and tested version -->
+<!-- but may miss some of the latest methods and updates. It can be -->
+<!-- installed with: -->
 
-```{r eval=FALSE, message=FALSE}
-BiocManager::install("microbiome/mia")
-```
+<!-- ```{r eval=FALSE, message=FALSE} -->
+<!-- BiocManager::install("microbiome/mia") -->
+<!-- ``` -->
 
 **Bioconductor development version** requires the installation of the
 latest R beta version. This is primarily recommended for those who
