--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -419,10 +419,10 @@ discovery rate, which has the following components:
 
   1. Winsorization to decrease the influence of outliers;
   
-  1. Posterior sampling based on a beta mixture prior to address
+  2. Posterior sampling based on a beta mixture prior to address
   sampling variability and zero inflation;
   
-  1. Reference-based multiple-stage normalization to address
+  3. Reference-based multiple-stage normalization to address
   compositional effects;
 
 
@@ -461,29 +461,26 @@ ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj,
 ```
 
 
-
 ### Comparison of methods
 
-The different methods yield somewhat different results but they could
+The different methods yield slightly different results but they could
 be also expected to overlap to a substantial degree. As an exercirse,
 you can compare the outcomes between the different methods in terms of
 effect sizes, significances, or other aspects that are comparable
 between the methods.
 
 
-
-
 ## Confounding variables
 
-Confounders are common in experimental research. In general, these can be
-classified into 3 types:
+Confounders are common in experimental studies. Generally, they can be
+classified into 3 groups:
 
-- Biological confounder, such as age, sex, etc. 
+- Biological confounders, such as age, sex, etc. 
 
-- Technical confounder that caused by data collection, storage, DNA
+- Technical confounders produced by data collection, storage, DNA
   extraction, sequencing process, etc.
 
-- Confounder caused by experimental models, such as cage effect,
+- Confounders resulting from experimental models, such as cage effect,
   sample background, etc.
 
 Adjusting confounders is an important practice to reach an unbiased
